Fixed overflow issue

--- a/src/styles/blocks/_questions.scss
+++ b/src/styles/blocks/_questions.scss
@@ -1,6 +1,8 @@
 .questions {
   position: relative;
 
+  overflow-x: clip;
+
   @include mediaDesktop {
     padding-top: 10px;
     padding-bottom: 130px;
